Ensure all paragraphs have the same width
This prevents paragraphs from overflowing on the right compared to
ol/ul/or >p, as this is fairly ugly.

--- a/themes/JustRead/static/css/main.css
+++ b/themes/JustRead/static/css/main.css
@@ -614,6 +614,7 @@ p,
 }
 @media screen and (min-width: 55.5em) {
   pre,
+  .post p,
   .post > p,
   .post blockquote,
   .post ul,
